// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing header item component should renders with props as expected 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Test
      <span
        class=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`testing header item component should renders without props as expected 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      
      <span
        class=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
